Version 4.4

* BUGFIX: Fixed a typo in CAL-04 verification error text

Version 4.3

2016-09-12 4.3.55

* BUGFIX: Fixed a TCP client open file descriptors leak

2016-06-17 4.3.54

* IMPROVEMENT: Added stronger check for aggregation hash chain index consistency
* BUGFIX: Fixed a bug where server closed TCP connection due to inactivity and we did not close session in our side
* BUGFIX: Fixed a bug where TCP client had trouble splitting aggregator responses
* BUGFIX: Fixed a bug where TCP client CPU consumption didn't drop after high load
* IMPROVEMENT: Now publications file can be cached by using method KSIBuilder.setPublicationsFileCacheExpirationTime(..)
* BUGFIX: Fixed a bug where Calendar Hash Chain rule checked wrong links.
* FEATURE: Added support for local aggregation.

Version 4.2

2016-05-12 4.2.33

* BUGFIX: TCP Client will now open a new connection, the moment it realizes that the old one is closed.

2016-04-19 4.2.32

* IMPROVEMENT: Changed signature identity separator to <space>::<space>.
* BUGFIX: Removed SHA-224 hash algorithm. Added internal policy rule to check aggregation hash chain link legacyId content.
* BUGFIX: Removed KSI.asyncExtendToHead() and KSI.extendToHead() methods
* BUGFIX: Fixed a bug when a fallback policy succeeded but verification result contained error code.
* IMPROVEMENT: CommonKsiClient is now called KsiCredentialsAwareClient. KsiPublicationsFileClient does not extend it anymore.
* IMPROVEMENT: KsiCredentialsAwareClient, KsiPublicationsFileClient and KSI class itself all extend java.io.Closeable and so all of their close() methods now throw java.io.IOException.
* IMPROVEMENT: Updated slf4j version to 1.7.12. Now the scope of slf4j-simple is 'provided'.
* IMPROVEMENT: Added getType() method to Policy interface
* IMPROVEMENT: Added getPublicationRecords() method to PublicationsFile interface.